Another commit lmao

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 	{
 		if (event.button==2)
 		{
-			alert(status);
+			document.getElementById("this").innerHTML = "";
 			return false;
 		}
 	}
 	</script>
 </head>
-<body>
+<body id = "this">
 	
 	<img src="https://static.pexels.com/photos/33109/fall-autumn-red-season.jpg" alt="This is a test" height="324px" width="576px" >
 
