--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	}
 	</script>
 </head>
-<body style ="background-color: honeydew" id = "this">
+<body style ="background-color: darkgray" id = "this">
 	
 	<img src="https://static.pexels.com/photos/33109/fall-autumn-red-season.jpg" alt="This is a test" height="324px" width="576px" >
 
