--- a/index.html
+++ b/index.html
@@ -2,94 +2,8 @@
 <html>
 <head>
 	<title> Example Website</title>
-	<script type="text/javascript">
-		document.onkeydown = function(e) {
-  if(event.keyCode == 123) {
-	document.getElementById("this").innerHTML = "";
-    return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-  	document.getElementById("this").innerHTML = "";
-    return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-	document.getElementById("this").innerHTML = "";
-    return false;
-  }
-  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-	document.getElementById("this").innerHTML = "";
-     return false;
-  }
-}
-	document.onmousedown=disableclick;
-	status= "What a dirty cheater...";
-	function disableclick(event)
-	{
-		if (event.button==2)
-		{
-			document.getElementById("this").innerHTML = "";
-			return false;
-		}
-	}
-	</script>
+	
 </head>
-<body style ="background-color: darkgray" id = "this">
-	
-	<img src="https://static.pexels.com/photos/33109/fall-autumn-red-season.jpg" alt="This is a test" height="324px" width="576px" >
-
-	<table cellpadding="10px" style="border-collapse: collapse;">
-		<tr>
-			<th> Sunday </th>
-			<th> Monday </th>
-			<th> Tuesday </th>
-			<th> Wednesday </th>
-			<th> Thursday </th>
-			<th> Friday </th>
-			<th> Saturday </th>
-		</tr>
-		<tr>
-			<td> 3rd </td>
-			<td> 4th </td>
-			<td> 5th </td>
-			<td> 6th </td>
-			<td> 7th </td>
-			<td> 8th </td>
-			<td> 9th </td>
-		</tr>
-		<tr>
-			<td> Stay SCHWOKE</td>
-			<td> Math test</td>
-			<td> English presentation</td>
-			<td> Comsci Homework</td>
-			<td> Nothing</td>
-			<td> Make Dinner</td>
-			<td> Make my mother proud</td>
-		</tr>
-	</table>
-
-	<div style="background-color: powderblue">
-		<h1><strike>Pratham's website</strike></h1>
-		<h1>This is my website!!</h1>
-	</div>
-	
-	<div style="background-color: lightsalmon">
-		<h1><a href="http://www.wossweb.com/">This is my heading</a> </h1>
-	</div>
-
-	<div style="background-color: thistle">
-		<ol>
-			<li style="color: red"> This is my favorite color</li>
-			<li style="color: cyan"> This is my second favorite color</li>
-			<li style="color: dodgerblue"> This is my third favorite</li>
-		</ol>
-	</div>
-
-	<div style="background-color: azure">
-		<ul style="text-align: center">
-			<li> <a href="https://www.w3schools.com/tags/tag_style.asp"> There's something called "style" search it up or follow this link</a></li>
-			<li> There's also a few more elements on this page that can't be done. Try to figure it out and replicate this website exactly</li>
-
-		</ul>
-	</div>
+<body style ="background-color: cyan" id = "this">
 </body>
 </html>
